--- a/04-lesson/index.html
+++ b/04-lesson/index.html
@@ -12,5 +12,10 @@
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus sed vulputate odio ut enim blandit volutpat. Consectetur a erat nam at lectus urna. In egestas erat imperdiet sed euismod nisi porta lorem. Scelerisque fermentum dui faucibus in. Elementum curabitur vitae nunc sed velit dignissim sodales. Quisque egestas diam in arcu cursus euismod quis. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Gravida in fermentum et sollicitudin ac. Vitae tortor condimentum lacinia quis. Mus mauris vitae ultricies leo integer malesuada.
     </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ducimus repudiandae aliquid possimus rerum vel sed quam vero consequatur, sint voluptate reiciendis corporis aut, porro quos eius exercitationem a. Ipsa.</p>
+    <p>Non provident nisi fugit tenetur. Vitae sunt illo dolore nam tenetur voluptates adipisci rerum blanditiis amet recusandae excepturi praesentium rem neque, modi repudiandae voluptas ab odio asperiores. Voluptas, assumenda vero!</p>
+    <p>Cupiditate perferendis dolor iste voluptatum mollitia, iusto saepe vero facilis explicabo dolores commodi dolore necessitatibus facere eius hic culpa repellendus laboriosam amet unde ex quo soluta suscipit, atque at! Vitae?</p>
+    <p>Tempora, nihil tenetur enim, consequuntur reprehenderit harum quo expedita officiis ducimus, dolores quas officia dolor explicabo incidunt iure quisquam voluptatum eos error necessitatibus? Velit repudiandae, quo laudantium eligendi consequuntur ipsum?</p>
+    <p>Molestiae saepe, assumenda excepturi quod provident omnis voluptates tempora nam sed. Autem maiores nulla tenetur sit numquam a optio repellat, hic dignissimos porro consequuntur ullam ea, itaque fugit facilis? Ut!</p>
 </body>
 </html>
