Con't to work with CSS Box Model

--- a/05-lesson/index.html
+++ b/05-lesson/index.html
@@ -9,11 +9,17 @@
 
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>CSS Box Model</h1>
   </header>
-  <p>
+  <main class="container">
+    <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus sed vulputate odio ut enim blandit volutpat. Consectetur a erat nam at lectus urna. In egestas erat imperdiet sed euismod nisi porta lorem. Scelerisque fermentum dui faucibus in. Elementum curabitur vitae nunc sed velit dignissim sodales. Quisque egestas diam in arcu cursus euismod quis. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Gravida in fermentum et sollicitudin ac. Vitae tortor condimentum lacinia quis. Mus mauris vitae ultricies leo integer malesuada.
-  </p>
+    </p>
+    <div class="circle">
+      
+    </div>
+  </main>
+
 </body>
 </html>
