--- a/06-lesson/index.html
+++ b/06-lesson/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Working with CSS Typography</title>
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-  
+  <header>
+    <h1>CSS Typography</h1>
+  </header>
+  <main>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, expedita? Animi consequuntur aperiam dolor ut? Ad sit cum expedita, saepe dicta ipsa maiores quod repellat vitae, fugiat quidem nostrum repellendus.</p>
+<!--     <form>
+      <label for="name">Name:</label>
+      <input id="name" type="text" placeholder="Your name"/>
+      <button>Submit</button>
+    </form> -->
+  </main>
 </body>
 </html>
