Setting up document/file structure for lesson

--- a/07-lesson/index.html
+++ b/07-lesson/index.html
@@ -9,6 +9,19 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <header>
+    <h1>Working with CSS Links</h1>
+  </header>
+  <main>
+    <p>Welcome to my page about <a href="https://www.google.com/search?q=+web+links">cool web links</a></p>
+
+    <p>Actually.. that isn&apos;t a good search phrase</p>
+
+    <p> Let's search for <a href="https://www.google.com/search?q=hypertext+links">hypertext links</a></p>
+
+    <p>I created page one with info about <a href="one.html">guitars</a></p>
+
+    <p>I created page two with info about <a href="two.html">Javascript</a></p>
+  </main>
 </body>
 </html>
