Con't to work with CSS Lists

--- a/08-lesson/index.html
+++ b/08-lesson/index.html
@@ -16,9 +16,9 @@
     <article>
       <h2>Ordered List</h2>
       <ol>
-        <li>Step One</li>
-        <li>Step Two</li>
-        <li>Step Three</li>
+        <li><span>Step One</span></li>
+        <li><span>Step Two</span></li>
+        <li><span>Step Three</span></li>
       </ol>
     </article>
     <article>
