Con't to work with CSS lists

--- a/08-lesson/index.html
+++ b/08-lesson/index.html
@@ -15,7 +15,7 @@
   <main>
     <article>
       <h2>Ordered List</h2>
-      <ol>
+      <ol start="3" reversed>
         <li><span>Step One</span></li>
         <li><span>Step Two</span></li>
         <li><span>Step Three</span></li>
@@ -25,7 +25,7 @@
       <h2>Unordered List</h2>
       <ul>
         <li>Step One</li>        
-        <li>Step Two</li>
+        <li><span>Step Two</span></li>
         <li>Step Three</li>
       </ul>
     </article>
