Working with display settings in CSS

--- a/10-lesson/index.html
+++ b/10-lesson/index.html
@@ -9,6 +9,18 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <main>
+    <p>This is a paragraph.</p>
+    <p>This is <span class="opposite">another </span>paragraph</p>
+
+    <!--     <nav>
+          <ul>
+            <li><a href="#">Intro</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+        </nav> -->
+
+  </main>
 </body>
 </html>
