Con't to work with CSS display settings

--- a/11-lesson/index.html
+++ b/11-lesson/index.html
@@ -9,6 +9,21 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <section>
+  <div class="block left">Float</div>
+    <p>Nobis eum cupiditate atque fugit odit, exercitationem magnam pariatur sunt temporibus natus.</p>
+  </section>
+
+  <p>Cumque veniam quae recusandae quis, aliquid, in ea minima eum dicta, porro nesciunt fuga corporis. Sint iure ut tenetur porro.</p>
   
+  <p>Autem illo dolor hic sed at eos fugiat est quos. Ea dicta voluptatem odio accusantium alias quis quaerat qui autem?</p>
+  
+  <div class="block right">Float</div>  
+  
+  <p>Accusamus aperiam hic eum veniam assumenda autem quis architecto quisquam, perferendis ratione animi beatae ullam, esse id iure recusandae dicta?</p>
+  
+  <p>Odit asperiores ducimus dicta necessitatibus perferendis perspiciatis soluta nemo sint. Est, excepturi aut cupiditate voluptatibus id ullam odit repellendus ut.</p>
+
 </body>
 </html>
