Working with CSS columns

--- a/12-lesson/index.html
+++ b/12-lesson/index.html
@@ -4,11 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CSS Columns</title>
 
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>Working with CSS Columns</h1>
+  
+  <section class="columns">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error blanditiis quaerat nulla magni molestiae non eius animi culpa unde modi.</p>
+    <p>Eaque, dolores placeat cum natus facere fugiat ipsam vero sunt, ratione quaerat magni debitis totam, ad accusamus molestiae? Unde, fugiat.</p>
+<!--     <h2>Next Topic</h2> -->    
+    <p class="quote">&#8220;Where's my rug, man?&#8221; <span class="nowrap">&#8212; The Dude</span></p>
+    <p>Voluptatem nemo tempora, impedit autem enim provident placeat consequuntur ullam molestiae rem qui, quo cupiditate, ut accusamus vitae in ipsum!</p>
+    <p>Dignissimos consequatur aut sed odio, numquam minus quaerat aliquam, tempora officiis dolorum exercitationem officia. Corrupti praesentium distinctio possimus quasi ratione.</p>
+  </section>
+
+  <section class="bottom-graph">
+    <p>Enim magni, architecto recusandae animi harum at dicta officiis dolores fugit dignissimos quibusdam saepe blanditiis doloribus illo cupiditate deserunt quo.</p>
+  </section>
+
 </body>
 </html>
