--- a/13-lesson/index.html
+++ b/13-lesson/index.html
@@ -10,7 +10,7 @@
   
 </head>
 <body>
-  <div class="outer-container">
+<!--   <div class="outer-container">
     <div class="inner-container">
       <div class="box absolute">
         <p>Absolute</p>
@@ -25,6 +25,24 @@
         <p>Sticky</p>
       </div>
     </div>
-  </div>
+  </div> -->
+  <button class="social">🚀</button>
+  <section id="one">
+    <header class="blue">Header One</header>
+    <h2>One</h2>
+  </section>
+  <section id="two">
+    <header class="red">Header Two</header>
+    <h2>Two</h2>
+  </section>
+  <section id="three">
+    <header class="green">Header Three</header>
+    <h2>Three</h2>
+  </section>
+  <footer>
+    <a href="#one">One</a>
+    <a href="#two">Two</a>
+    <a href="#three">Three</a>
+  </footer>
 </body>
 </html>
