--- a/15-lesson/index.html
+++ b/15-lesson/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-  <h1>CSS Grid Layout</h1>  
+  <header>
+    <h1>CSS Grid Layout</h1>
+  </header>
+
+  <main class="container">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+    <div class="box">6</div>
+  </main>
 </body>
 
 </html>
