Con't to work with CSS Grid Layout

--- a/15-lesson/index.html
+++ b/15-lesson/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header el">
     <h1>CSS Grid Layout</h1>
   </header>
 
@@ -21,6 +21,14 @@
     <div class="box">5</div>
     <div class="box">6</div>
   </main>
+  
+  <aside class="sidebar el">
+    <h2>Sidebar</h2>
+  </aside>
+
+  <footer class="footer el">
+    <h2>Footer</h2>
+  </footer>
 </body>
 
 </html>
