--- a/16-lesson/index.html
+++ b/16-lesson/index.html
@@ -7,9 +7,29 @@
   <title>Working with images in CSS</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <h1>Working with images in CSS</h1>
   </header>
+
+<!--   <section class="example">
+    <p>
+      <img src="img/pat1.png" alt="Pattern 1" width="200" height="200">
+    </p>
+  </section> -->
+  <div class="container">
+    <section class="hero">
+      <figure class="profile-pic-figure">
+        <img src="img/profile-800x800.png" alt="Profile Picture" title="Photographer" width="800" height="800">
+        <figcaption class="offscreen">Jane Doe</figcaption>
+      </figure>
+      <h1 class="h1">
+        <span class="nowrap">Hello 👋</span>
+        <span class="nowrap">I'm Jane</span>
+      </h1>
+    </section>
+  </div>
 </body>
+
 </html>
