--- a/16-lesson/index.html
+++ b/16-lesson/index.html
@@ -18,7 +18,8 @@
       <img src="img/pat1.png" alt="Pattern 1" width="200" height="200">
     </p>
   </section> -->
-  <div class="container">
+
+<!--   <div class="container">
     <section class="hero">
       <figure class="profile-pic-figure">
         <img src="img/profile-800x800.png" alt="Profile Picture" title="Photographer" width="800" height="800">
@@ -29,7 +30,11 @@
         <span class="nowrap">I'm Jane</span>
       </h1>
     </section>
-  </div>
+  </div> -->
+
+  <section>
+    <p class="clip">Jane</p>
+  </section>
 </body>
 
 </html>
