--- a/17-lesson/index.html
+++ b/17-lesson/index.html
@@ -4,12 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CSS Media Queries</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <h1>CSS Media Queries</h1>
+    <nav><h2>Nav</h2></nav>
   </header>
+
+  <main>
+    <h2>Main</h2>
+  </main>
+
+  <footer>
+    <h2>Footer</h2>
+  </footer>
+
 </body>
 </html>
