--- a/18-lesson/index.html
+++ b/18-lesson/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee Card Project</title>
+  <title>CSS Mini-Project:Profile Cards</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <h1>Employee Card Project</h1>
@@ -20,6 +21,6 @@
   <footer>
     <h2>Footer</h2>
   </footer>
-
 </body>
+
 </html>
