--- a/19-lesson/index.html
+++ b/19-lesson/index.html
@@ -4,15 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Working with CSS Pseudo Classes</title>
+  <title>CSS Pseudo Classes</title>
   <link rel="stylesheet" href="css/styles.css">
-
 </head>
 
 <body>
   <header>
     <h1>CSS Pseudo Classes</h1>
-  </header>  
+    <nav>
+      <a href="#profile1">Joe</a>
+      <a href="#profile2">Matt</a>
+      <a href="#profile3">Jane</a>
+    </nav>
+  </header>
+
+  <main>
+    <article id="profile1" class="card">
+      <figure>
+        <img src="../18-lesson/img/profile1-500x500.png" alt="Joe Coder" width="500" height="500">
+        <figcaption>Joe Coder</figcaption>
+      </figure>
+      <p>I code stuff.</p>
+    </article>
+    <article id="profile2" class="card">
+      <figure>
+        <img src="../18-lesson/img/profile2-500x500.png" alt="Matt Designer" width="500" height="500">
+        <figcaption>Matt Designer</figcaption>
+      </figure>
+      <p>I design stuff.</p>
+    </article>
+    <article id="profile3" class="card">
+      <figure>
+        <img src="../18-lesson/img/profile3-500x500.png" alt="Jane Dev Rel" width="500" height="500">
+        <figcaption>Jane <span class="nowrap">Dev Rel</span> </figcaption>
+      </figure>
+      <p>I teach stuff.</p>
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; Acme Co.</p>
+  </footer>
 </body>
 
 </html>
