--- a/20-lesson/index.html
+++ b/20-lesson/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-  
+  <header>
+    <h1>CSS Media Queries</h1>
+    <nav><h2>Nav</h2></nav>
+  </header>
+
+  <main>
+    <h2>Main</h2>
+  </main>
+
+  <footer>
+    <h2>Footer</h2>
+  </footer>
 </body>
 
 </html>
