--- a/20-lesson/index.html
+++ b/20-lesson/index.html
@@ -15,7 +15,9 @@
   </header>
 
   <main>
-    <div class="square"><p>Hey</p></div>
+    <div class="square">
+      <p>Hey</p>
+    </div>
     <div class="square">💻</div>
     <div class="square">💻</div>
     <div class="square">💻</div>
