Con't to work with CSS functions

--- a/21-lesson/index.html
+++ b/21-lesson/index.html
@@ -15,14 +15,20 @@
   </header>
 
   <main>
-    <section>
+<!--     <section>
       <h2>My Heading</h2>
       <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam quisquam suscipit, perspiciatis quidem, adipisci voluptate ab iure ut necessitatibus rem dolorum facilis reprehenderit possimus earum culpa fugiat consectetur dolor.
       </p>
       <br>
       <a href="https://www.google.com">Google</a>
     </section>
-    <!-- <div class="square">
+    <aside>
+      <h2>Aside</h2>
+      <p class="content">
+        <span class="tooltip" data-tooltip="This is Latin">Lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Iste quos, ex beatae cum sunt, voluptas similique unde ratione dicta pariatur quisquam nemo cupiditate voluptatum! Laudantium animi eligendi dicta nobis in?
+      </p>
+    </aside> -->
+    <div class="square">
       <p>Hey</p>
     </div>
     <div class="square">💻</div>
@@ -35,7 +41,7 @@
     <div class="square">💻</div>
     <div class="square">💻</div>
     <div class="square">💻</div>
-    <div class="square">💻</div> -->
+    <div class="square">💻</div>
   </main>
 
   <footer>
