--- a/23-lesson/index.html
+++ b/23-lesson/index.html
@@ -11,5 +11,12 @@
   <header>
     <h1>CSS Organization</h1>
   </header>
+
+  <main>
+    <div class="square">🚀</div>
+    <div class="square">🔥</div>
+    <div class="square animate">🌮</div>
+  </main>
+  
 </body>
 </html>
