--- a/23-lesson/index.html
+++ b/23-lesson/index.html
@@ -15,7 +15,7 @@
       <nav class="header__nav">
         <button class="header__btn">🚀</button>
         <button class="header__btn header__btn--secondary">🔥</button>
-        <button class="header__btn header__btn--lean header__btn--border-lg">🌮</button>
+        <button class="header__btn header__btn--lean header__btn--border-lg header__btn--secondary">🌮</button>
       </nav>
   </header>
 </body>
