Con't to organize file content/structure

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -3,40 +3,44 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Matt Griffes">
+  <meta name="description" content="The Official Website for The Little Taco Shop">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Little Taco Shop</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to The Little Taco Shop</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="#about">About <abbr title="The Little Taco Shop">LTS</abbr></a>
-            </li>
-            <li>
-                <a href="#menu">Our Menu</a>
-            </li>
-            <li>
-                <a href="hours.html">Store Hours</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact Us</a>
-            </li>
-        </ul>
+  <header class="header">
+    <h1 class="header__h1">The Little Taco Shop</h1>
+    <nav class="header__nav">
+      <ul class="header__ul">
+        <li>
+            <a href="/#menu">Menu</a>
+        </li>
+        <li>
+          <a href="hours.html">Hours</a>
+        </li>
+        <li>
+            <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/about.html">About</a>
+        </li>
+      </ul>
     </nav>
-
-    <figure>
-        <img src="img/tacos_and_drink_400x267.png" alt="Tacos and a Drink" title="We love tacos!" width="400"
-            height="267">
-        <figcaption>
-            Tacos and a Drink
-        </figcaption>
-    </figure>
   </header>
+
+  <section class="hero">
+    <h2 class="hero__h2">Bienvenidos!</h2>
+    <figure>
+      <img src="img/tacos_and_drink_1000x667.png" alt="Tacos and a Drink" title="We love tacos!" width="1000" height="667">
+      <figcaption class="offscreen">
+          Tacos and a Drink
+      </figcaption>
+    </figure>
+  </section>
   
   <hr>
   
