--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -3,42 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Dave Gray">
+    <meta name="author" content="Matt Griffes">
     <meta name="description" content="Contact information for The Little Taco Shop">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - LTS</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Contact Us</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/#about">About <abbr title="The Little Taco Shop">LTS</abbr></a>
-                </li>
-                <li>
-                    <a href="/#menu">Our Menu</a>
-                </li>
-                <li>
-                    <a href="hours.html">Store Hours</a>
-                </li>
-            </ul>
-        </nav>
+  <header class="header">
+    <h1 class="header__h1">Contact Us</h1>
+    <nav class="header__nav">
+      <ul class="header__ul">
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/#menu">Menu</a>
+        </li>
+        <li>
+          <a href="hours.html">Hours</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-        <figure>
-            <img src="img/tacos_close_up_400x260.png" alt="Little Taco Shop Tacos" title="Tacos ready to eat!"
-                width="400" height="260">
-            <figcaption>
-                Little Taco Shop Tacos
-            </figcaption>
-        </figure>
-    </header>
-    <hr>
+  <section class="hero">
+    <figure>
+      <img src="img/tacos_close_up_1000x649.png" alt="Little Taco Shop Tacos" title="Tacos ready to eat!"
+          width="1000" height="649">
+      <figcaption class="offscreen">
+          Little Taco Shop Tacos
+      </figcaption>
+    </figure>
+  </section>
+
     <main>
         <section>
             <h2>Our Contact Form</h2>
