--- a/final-project/hours.html
+++ b/final-project/hours.html
@@ -3,55 +3,57 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Dave Gray">
+    <meta name="author" content="Matt Griffes">
     <meta name="description" content="Store Hours for The Little Taco Shop">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LTS Hours</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>The Little Taco Shop Hours</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/#about">About <abbr title="The Little Taco Shop">LTS</abbr></a>
-                </li>
-                <li>
-                    <a href="/#menu">Our Menu</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-
-        <figure>
-            <img src="img/tacos_tray_400x267.png" alt="A Tray of Tasty Tacos" title="We love trays of tacos!"
-                width="400" height="267">
-            <figcaption>
-                A Tray of Tasty Tacos
-            </figcaption>
-        </figure>
+    <header class="header">
+      <h1 class="header__h1">The Little Taco Shop Hours</h1>
+      <nav class="header__nav">
+        <ul class="header__ul">
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+              <a href="/#menu">Menu</a>
+          </li>
+                    <li>
+              <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="about.html">about</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <hr>
+
+    <section class="hero">
+      <figure>
+        <img src="img/tacos_tray_1000x667.png" alt="A Tray of Tasty Tacos" title="We love trays of tacos!" width="1000" height="667">
+        <figcaption class="offscreen">
+            A Tray of Tasty Tacos
+        </figcaption>
+      </figure>
+    </section>
+
     <main>
-        <p>
-            We are open 7 days a week!
-        </p>
-        <dl>
-            <dt>Sunday-Thursday</dt>
-            <dd>11am-9pm</dd>
-            <dt>Friday-Saturday</dt>
-            <dd>11am-11pm</dd>
-        </dl>
-        <p>
-            <a href="#">Back To Top</a>
-        </p>
+      <p>
+          We are open 7 days a week!
+      </p>
+      <dl>
+          <dt>Sunday-Thursday</dt>
+          <dd>11am-9pm</dd>
+          <dt>Friday-Saturday</dt>
+          <dd>11am-11pm</dd>
+      </dl>
+      <p>
+          <a href="#">Back To Top</a>
+      </p>
     </main>
     <hr>
     <footer>
