--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Matt Griffes">
-    <meta name="description" content="Contact information for The Little Taco Shop">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - LTS</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="author" content="Matt Griffes">
+  <meta name="description" content="Contact information for The Little Taco Shop">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us - LTS</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="header__nav">
       <ul class="header__ul">
         <li>
-          <a href="/">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="/#menu">Menu</a>
@@ -42,46 +42,48 @@
     </figure>
   </section>
 
-    <main>
-        <section>
-            <h2>Our Contact Form</h2>
+  <main class="main">
+    <article class="main__article">
+      <h2>Location</h2>
+      <address>
+        555 Taco Temptation Lane, Suite T<br>
+        Kansas City, MO 55555-5555
+        <br><br>
+        Phone: <a href="tel:+5555555555">555-555-5555</a>
+      </address>
+    </article>
+    <article class="main__article">
+      <h2>Contact Form</h2>
+      <form action="https://httpbin.org/get" method="get">
+        <fieldset>
+            <legend>Send Us A Message</legend>
+            <p>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name" placeholder="your name" required>
+            </p>
+            <p>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" placeholder="your email" required>
+            </p>
+            <p>
+                <label for="message">Your Message:</label>
+                <br>
+                <textarea name="message" id="message" cols="30" rows="10"
+                    placeholder="Type your message here"></textarea>
+            </p>
+        </fieldset>
+        <button type="submit">Send</button>
+        <button type="reset">Reset</button>
+      </form>
+    </article>
+  </main>
 
-            <form action="https://httpbin.org/get" method="get">
-                <fieldset>
-                    <legend>Send Us A Message</legend>
-                    <p>
-                        <label for="name">Name:</label>
-                        <input type="text" name="name" id="name" placeholder="your name" required>
-                    </p>
-                    <p>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" placeholder="your email" required>
-                    </p>
-                    <p>
-                        <label for="message">Your Message:</label>
-                        <br>
-                        <textarea name="message" id="message" cols="30" rows="10"
-                            placeholder="Type your message here"></textarea>
-                    </p>
-                </fieldset>
-                <button type="submit">Send</button>
-                <button type="reset">Reset</button>
-            </form>
-        </section>
-        <section>
-            <h2>Our Location</h2>
-            <address>
-                555 Taco Temptation Lane, Suite T<br>
-                Kansas City, MO 55555-5555
-                <br><br>
-                Phone: <a href="tel:+5555555555">555-555-5555</a>
-            </address>
-        </section>
-    </main>
-    <hr>
-    <footer>
-        <p>Copyright &copy; The Little Taco Shop</p>
-    </footer>
+  <footer class="footer">
+    <p>
+      <span class="nowrap">Copyright &copy; </span>
+      <span class="nowrap">Little Taco Shop</span>
+    </p>
+  </footer>
 </body>
 
 </html>
